# glapd-web

./: .gitignore  .gitmodules  CMakeLists.txt  glapd-web.js  glapd-web.wasm  index.html  readme.md  worker.js
apps/: CMakeLists.txt
apps/parpl-demo/: CMakeLists.txt
apps/parpl-demo/src/: main.cpp
apps/portable-glapd/: CMakeLists.txt
apps/portable-glapd/src/: glapd.h  main.cpp  par.cpp  signals.h
libs/: CMakeLists.txt
libs/bowtie-wrapper/: CMakeLists.txt
libs/parpl/: CMakeLists.txt
libs/parpl/src/: par.cpp  par.h
resources/html/: index.html  main.js  worker.js
src/: bowtie.h  main.cpp  signals.cpp  signals.js
tools/: build-web-app.sh  dev-httpd.py
